# wpt-rs

./: .gitignore  Cargo.toml  README.md  justfile
crates/cli/: Cargo.toml
crates/cli/src/: compression.rs  main.rs
crates/cli/src/commands/: calc_scores.rs  convert.rs  diff.rs  merge.rs  mod.rs  other_browsers.rs
crates/wptreport/: Cargo.toml
crates/wptreport/src/: lib.rs  merge.rs  score.rs  summarize.rs
crates/wptreport/src/reports/: score_summary.rs  servo_test_scores.rs  wpt_report.rs
crates/wptv/: Cargo.toml  Dioxus.toml
crates/wptv/src/: main.rs  wpt_fyi_api.rs
crates/wptv/src/components/: app.rs
crates/wptv/src/pages/: home.rs  mod.rs  wpt_fyi.rs
examples/: score.rs
src/: aggregate.rs  lib.rs  main.rs  report.rs  score.rs  summarize.rs
src/reports/: mod.rs  score_summary.rs  servo_test_scores.rs  wpt_report.rs
