[workspace]
members = [
  "crates/cli",
  "crates/wptreport",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
edition = "2021"

[workspace.dependencies]
wptreport = { path = "./crates/wptreport", version = "0.0.5" }
rayon = "1.10.0"
serde = "1"
serde_json = "1"
serde-jsonlines = "0.6"
zstd = "0.13"
xz2 = "0.1"
tikv-jemallocator = "0.6"

