[workspace]
members = [
  "crates/cli",
  "crates/wptreport",
  "crates/wptv",
]
resolver = "2"

[workspace.package]
version = "0.0.11"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicoburns/wpt-rs"
rust-version = "1.81"
edition = "2021"

[workspace.dependencies]
wptreport = { path = "./crates/wptreport", version = "0.0.11" }
rayon = "1.10.0"
serde = "1"
serde_json = "1"
serde-jsonlines = "0.6"
zstd = "0.13"
xz2 = "0.1"
tikv-jemallocator = "0.6"
clap = "4.5"
indexmap = "2.10"
dioxus = { version = "0.7.0-alpha.3" }
reqwest = { version = "0.12" }
smol_str = { version = "0.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

