[package]
name = "wpt"
description = "CLI for working with WPT data"
version.workspace = true
respository.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["zstd", "xz2", "jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
zstd = ["dep:zstd"]
xz2 = ["dep:xz2"]

[dependencies]
# Workspace dependecies
wptreport = { workspace = true }

# 3rd-party dependencies
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-jsonlines = { workspace = true }
zstd = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "cargo"] }
reqwest = { workspace = true, features = ["blocking", "json", "gzip"] }
url = { version = "2.5.7", features = ["serde"] }
tempdir = "0.3.7"
tempfile = "3.21.0"
anyhow = "1.0.99"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
