[package]
name = "wptreport"
description = "Tools for working with WPT reports"
version.workspace = true
respository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
